# oute-muscle

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml
.github/: dependabot.yml
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/src/: config.py  dependencies.py  main.py
apps/api/src/adapters/: __init__.py  pg_candidate_repo.py  pg_rule_repo.py  vertex_embedding.py  vertex_llm.py
apps/api/src/middleware/: auth.py  correlation.py  rate_limit.py  rls.py  webhook_auth.py
apps/api/src/routes/: __init__.py  admin.py  audit.py  findings.py  health.py  incidents.py  sarif.py  scans.py  synthesis.py  tenants.py  waitlist.py  webhooks.py
apps/api/src/services/: false_positive.py
apps/api/src/workers/: __init__.py  rag_worker.py  retention_purge.py  synthesis.py  synthesis_archive.py
apps/api/tests/: test_findings.py
apps/api/tests/acceptance/: test_quickstart_scenarios.py
apps/api/tests/integration/: test_admin_api.py  test_check_runs.py  test_pr_comments.py  test_rest_sarif.py  test_rest_scan.py
apps/api/tests/unit/: test_admin_routes.py  test_admin_users.py  test_api_key_auth.py  test_plan_limits.py  test_rate_limit.py  test_webhook_auth.py  test_webhook_router.py
apps/mcp/: Dockerfile  pyproject.toml
apps/mcp/src/: main.py  metering.py
apps/mcp/src/auth/: __init__.py  middleware.py  provider.py
apps/mcp/tests/: test_metering.py  test_oauth.py  test_tool_advisory.py  test_tool_list_incidents.py  test_tool_scan_code.py  test_tool_synthesize.py  test_tool_validate_fix.py
(+145 files in other folders)
