[project]
name = "oute-muscle-api"
version = "0.1.0"
description = "Oute Muscle FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-gcp-trace>=1.11.0",
    "oute-muscle-core",
    "oute-muscle-db",
]

[tool.uv.sources]
oute-muscle-core = { workspace = true }
oute-muscle-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
