[project]
name = "oute-muscle-mcp"
version = "0.1.0"
description = "Oute Muscle MCP Server (Streamable HTTP + OAuth 2.1)"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyjwt[crypto]>=2.8.0",
    "structlog>=24.1.0",
    "oute-muscle-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
